[package]
name = "stream-map-any"
version = "0.2.0"
authors = ["seirdb <dries.bossers@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
documentation = "https://docs.rs/stream-map-any/0.2.0/stream_map_any/"
description = "Allows merging async Streams of different output type"
homepage = "https://github.com/seirdb/stream-map-any"
repository = "https://github.com/seirdb/stream-map-any"
readme = "README.md"
keywords = ["async", "non-blocking", "futures"]

[dependencies]
futures = { version = "0.3", default-features = false }

[dev-dependencies]
futures = "0.3"
tokio = { version = "0.2.20", features = ["stream", "macros"] }
criterion = "0.3"

[[bench]]
name = "performance"
harness = false
